--- a/package.json
+++ b/package.json
@@ -14,24 +14,24 @@
     "@react-navigation/stack": "^6.3.29",
     "expo": "^49.0.23",
     "expo-checkbox": "~2.4.0",
-    "expo-image-picker": "^14.7.1",
-    "expo-location": "^16.5.5",
-    "expo-status-bar": "~1.11.1",
+    "expo-image-picker": "~14.3.2",
+    "expo-location": "~16.1.0",
+    "expo-status-bar": "~1.6.0",
     "firebase": "^10.10.0",
     "react": "18.2.0",
-    "react-native": "0.73.5",
+    "react-native": "0.72.10",
     "react-native-calendars": "^1.1304.1",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-gifted-chat": "^2.4.0",
     "react-native-image-picker": "^7.1.2",
     "react-native-map": "^0.0.1",
-    "react-native-maps": "^1.11.3",
+    "react-native-maps": "1.7.1",
     "react-native-paper": "^5.12.3",
-    "react-native-safe-area-context": "^4.9.0",
-    "react-native-screens": "^3.29.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
     "react-native-webrtc": "^118.0.3",
-    "react-native-webview": "^13.8.2"
+    "react-native-webview": "13.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
