--- a/package.json
+++ b/package.json
@@ -9,21 +9,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/geolocation": "^3.2.0",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
-    "expo": "^49.0.23",
+    "expo": "^51.0.2",
     "expo-checkbox": "~2.4.0",
     "expo-constants": "~14.4.2",
     "expo-device": "~5.4.0",
     "expo-image-picker": "~14.3.2",
     "expo-location": "~16.1.0",
-    "expo-notifications": "~0.20.1",
+    "expo-notifications": "^0.28.1",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.10.0",
     "react": "18.2.0",
-    "react-native": "0.72.10",
+    "react-native": "^0.74.1",
     "react-native-calendars": "^1.1304.1",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.12.0",
